# copilot-rs

./: .gitmodules  Cargo.toml  README.md
src/: actor.rs  auth.rs  backend.rs  cache.rs  cancellable.rs  completions.rs  copilot.rs  debounce.rs  debouncer.rs  lib.rs  main.bak  main.rs  notsend.rs  parse.rs  pending.rs  reader.rs  request.rs  runner.rs  state.rs  timeout.rs  utils.rs
src/copilot/: auth.rs  builder.rs  parse.rs  receiver.rs  response.rs
