[package]
name = "copilot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cancellation = "0.1.0"
chrono = "0.4.26"
codespan = "0.11.1"
dashmap = "5.5.0"
env_logger = "0.10.0"
eventsource-stream = "0.2.3"
exitfailure = "0.5.1"
futures = "0.3.28"
futures-util = "0.3.28"
github-device-flow = "0.1.4"
http = "0.2.9"
interfaces = "0.0.8"
network-interface = "1.0.1"
oauth2 = "4.4.1"
regex = "1.9.1"
reqwest = "0.11.18"
reqwest-eventsource = "0.4.0"
ropey = "1.6.0"
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.102"
sha256 = "1.1.4"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.uuid]
version = "1.3.4"
features = ["v4", "fast-rng", "macro-diagnostics"]
