[package]
name = "copilot-rs"
version = "0.19.0"
edition = "2021"
rust-version = "1.64.0"
readme = "README.md"
keywords = ["language-server", "lsp", "tower"]
exclude = ["./tower-lsp/tower-lsp-macros"]

[features]
# default = ["runtime-tokio"]
# runtime-agnostic = ["async-codec-lite"]
# runtime-tokio = ["tokio", "tokio-util"]
# proposed = ["lsp-types/proposed"]

[dependencies]
async-codec-lite = { version = "0.0", optional = true }
async-trait = "0.1"
async-weighted-semaphore = "0.2.1"
auto_impl = "1.0"
bytes = "1.0"
dashmap = "5.1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
httparse = "1.8"
lsp-types = "0.94"
memchr = "2.5"
# tokio = { version = "1.17", features = ["full"] }
# tokio-util = { version = "0.7", optional = true, features = ["codec", "compat"] }
tower-lsp-macros = { version = "0.8", path = "./tower-lsp/tower-lsp-macros" }
tower = { version = "0.4", default-features = false, features = ["util"] }
tracing = "0.1"
tower-lsp = { path= "./tower-lsp", features = ["proposed"] }
async-tungstenite = { version = "0.18", features = ["tokio-runtime"] }
# tracing-subscriber = "0.3"
ws_stream_tungstenite = { version = "0.9", features = ["tokio_io"] }
eventsource-stream = "0.2.3"
reqwest-eventsource = "0.4.0"
github-device-flow = "0.1.4"
ropey = "1.6.0"
serde = {version = "1.0.171", features = ["derive"]}
serde_derive = "1.0.171"
serde_json = "1.0.102"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tracing-subscriber = "0.3.17"
futures-util = "0.3.28"
chrono = "0.4.26"
uuid = {version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"]}
interfaces = "0.0.9"
sha256 = "1.3.0"

[workspace]
members = [".", "./tower-lsp", "./tower-lsp/tower-lsp-macros"]
default-members = ["."]
